# ==================
# Project definition
# ==================
# Derived from https://peps.python.org/pep-0621/
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42,<82", # At least v42 of setuptools required.
  "versioningit",
]

[project]
name = "mlflow-cratedb"
description = "MLflow adapter for CrateDB"
readme = "README.md"
keywords = [
  "ai",
  "cratedb",
  "databricks",
  "machine learning",
  "ml",
  "ml-ops",
  "mlflow",
  "mlflow-tracking",
  "mlops",
]
license = { text = "Apache License 2.0" }
authors = [
  { name = "Andreas Motl", email = "andreas.motl@crate.io" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Database :: Front-Ends",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Archiving",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "crash",
  "dask[dataframe]>=2024.4.1",
  "joblib!=1.4.0",
  "mlflow[auth]==2.22.4",
  "setuptools<82",
  "sqlalchemy-cratedb>=0.38.0,<1",
  "sqlparse<0.6",
]
optional-dependencies.develop = [
  "mypy<1.20",
  "poethepoet<1",
  "pyproject-fmt<3",
  "ruff<0.16",
  "validate-pyproject<1",
]
optional-dependencies.release = [
  "build<2",
  "twine<7",
]
optional-dependencies.test = [
  "psutil<8",
  "pytest<9",
  "pytest-cov<8",
]
urls.changelog = "https://github.com/crate/mlflow-cratedb/blob/main/CHANGES.md"
urls.documentation = "https://github.com/crate/mlflow-cratedb"
urls.homepage = "https://github.com/crate/mlflow-cratedb"
urls.repository = "https://github.com/crate/mlflow-cratedb"
scripts.mlflow-cratedb = "mlflow_cratedb.cli:cli"
entry-points."mlflow.app".mlflow-cratedb = "mlflow_cratedb.server:app"

[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
packages = [ "mlflow_cratedb" ]

[tool.ruff]
line-length = 120
extend-exclude = [
  "tests/test_tracking.py",
]
lint.select = [
  # Builtins
  "A",
  # Bugbear
  "B",
  # comprehensions
  "C4",
  # Pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  # isort
  "I",
  # pandas-vet
  "PD",
  # return
  "RET",
  # Bandit
  "S",
  # print
  "T20",
  "W",
  # flake8-2020
  "YTT",
]
lint.per-file-ignores."tests/*" = [ "S101" ]  # Use of `assert` detected
lint.per-file-ignores."tests/conftest.py" = [ "E402" ]  # Module level import not at top of file

[tool.pyproject-fmt]
keep_full_version = true

[tool.mypy]
packages = [ "mlflow_cratedb" ]
exclude = []
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
no_implicit_optional = true
non_interactive = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest]
ini_options.minversion = "2.0"
ini_options.addopts = """
  -rfEX -p pytester --strict-markers --verbosity=3
  --capture=no
  --cov --cov-report=term-missing --cov-report=xml
  """
ini_options.log_level = "DEBUG"
ini_options.log_cli_level = "DEBUG"
ini_options.testpaths = [ "tests" ]
ini_options.xfail_strict = true
ini_options.markers = [
  "examples",
  "notrackingurimock",
  "slow",
]

[tool.coverage]
run.branch = false
run.omit = [
  "tests/*",
]
run.source = [ "mlflow_cratedb" ]
report.fail_under = 0
report.show_missing = true

[tool.versioningit]
vcs.method = "git-archive"
vcs.default-tag = "v0.0.0"
vcs.describe-subst = "$Format:%(describe:tags,match=v*)$"

[tool.poe]
# ===================
# Tasks configuration
# ===================
tasks.format = [
  { cmd = "ruff format ." },
  # Configure Ruff not to auto-fix (remove!):
  # Ignore unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt pyproject.toml" },
]
tasks.lint = [
  { cmd = "ruff format --check ." },
  { cmd = "ruff check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]
tasks.test = [
  { cmd = "pytest -m 'not examples'" },
]
tasks.test-fast = [
  { cmd = "pytest -m 'not slow'" },
]
tasks.build = { cmd = "python -m build" }
tasks.check = [ "lint", "test" ]
tasks.check-fast = [ "lint", "test-fast" ]
tasks.release = [
  { cmd = "python -m build" },
  { cmd = "twine upload --skip-existing dist/*.tar.gz dist/*.whl" },
]
